Avoid gap when drag&drop'ing
Fixes #788

--- a/static/explorer.css
+++ b/static/explorer.css
@@ -11,6 +11,10 @@
     visibility: visible;
 }
 
+body {
+    overflow: hidden;
+}
+
 .navbar-default {
     border: none;
     border-radius: 0;
